Fixed width on mobile

--- a/static/css/main.sass
+++ b/static/css/main.sass
@@ -180,3 +180,10 @@ footer
             bottom: 0
             right: 0
             margin: 0 -4px -4px 0
+
+$tablet-width: 768px
+$desktop-width: 1024px
+
+@media (max-width: $tablet-width)
+    .main
+        padding: 80px 0 0
